spacing issue

--- a/src/Pages/Home/RoadmapSection.scss
+++ b/src/Pages/Home/RoadmapSection.scss
@@ -154,6 +154,7 @@
 }
 @media only screen and (max-width: 1000px) {
   .rm-section {
+    padding-bottom: 32px;
 
     .rm-steps-wrapper {
       flex-direction: column;
